Added Dynamic Inputs

--- a/ssh-command-executor.html
+++ b/ssh-command-executor.html
@@ -23,5 +23,9 @@
 </script>
 
 <script type="text/html" data-help-name="ssh-command-executor">
-    <p>This node executes a command on the remote system using an established SSH connection from the SSH Connector Node. The command can be specified in the node configuration or dynamically via <code>msg.payload.command</code>.</p>
+    <p>This node executes a command on the remote system using an established SSH connection from the SSH Connector Node. The command can be specified in the node configuration or dynamically via <code>msg.payload.command</code>.
+    
+    Dynamic Variables:
+    msg.payload.command
+    </p>
 </script>
