organized, exampels, readme

--- a/nodes/ssh-interactive.html
+++ b/nodes/ssh-interactive.html
@@ -59,5 +59,6 @@
         <li>"msg.payload.username": ""</li>
         <li>"msg.payload.password": ""</li>
         <li>"msg.payload.privateKey": "-----BEGIN RSA PRIVATE KEY-----\n...\n-----END RSA PRIVATE KEY-----"</li>
+        <li>"passphrase": "password"</li>
     </ul>
 </script>
