Added Extract Lines and string search

--- a/nodes/ssh-connection-closer.html
+++ b/nodes/ssh-connection-closer.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
     RED.nodes.registerType('ssh-connection-closer',{
-        category: 'network',
+        category: 'ssh expect tcl',
         color: '#a6bbcf',
         defaults: {
             name: {value:""}
