--- a/nodes/ssh-interactive.html
+++ b/nodes/ssh-interactive.html
@@ -64,6 +64,7 @@
         <li>"msg.payload.username": ""</li>
         <li>"msg.payload.password": ""</li>
         <li>"msg.payload.privateKey": "-----BEGIN RSA PRIVATE KEY-----\n...\n-----END RSA PRIVATE KEY-----"</li>
-        <li>"passphrase": "password"</li>
+        <li>"msg.payload.passphrase": "password"</li>
+        <li>"msg.payload.ignoreHostKey": "true"</li>
     </ul>
 </script>
