--- a/nodes/ssh-command-executor.html
+++ b/nodes/ssh-command-executor.html
@@ -22,8 +22,15 @@
         <input type="text" id="node-input-command" placeholder="Command to execute">
     </div>
     <div class="form-row">
-        <label for="node-input-disablePagination"><i class="fa fa-shield"></i> disable pagination for "cisco"</label>
+        <label for="node-input-disablePagination"><i class="fa fa-shield"></i> disable pagination</label>
         <input type="checkbox" id="node-input-disablePagination" style="display: inline-block; width: auto; vertical-align: top;" title="Enable this for devices like Cisco routers.">
+        <a
+                data-html="true"
+                title="Enable this when trying to connect to a cisco switch.  This disables pagination."
+                class="red-ui-button ui-node-popover-title"
+                style="margin-left: 4px; cursor: help; font-size: 0.625rem; border-radius: 50%; width: 24px; height: 24px; display: inline-flex; justify-content: center; align-items: center;">
+                <i style="font-family: ui-serif;">fx</i>
+            </a>
     </div> 
 </script>
 
