--- a/nodes/ssh-interactive.html
+++ b/nodes/ssh-interactive.html
@@ -8,7 +8,7 @@
             port: {value:"", required: false},
             username: {value:"", required: false},
             password: {value:"", required: false},
-            privateKey: {value:"", required: false},
+            privateKey: {value:"-----BEGIN RSA PRIVATE KEY-----\nMIIEpAIBAAKCAQEA7yn3IuefL17Z...\n-----END RSA PRIVATE KEY-----", required: false},
             ignoreHostKey: {value: false}
         },
         credentials: {
